# fastapi-htmx-lambda

./: Dockerfile  README.md  pyproject.toml  requirements.txt
src/myapi/: main.py
src/myapi/lib/: get_result.py
src/myapi/templates/: index.html  result.html
